--- a/Halo5Stats/Main.storyboard
+++ b/Halo5Stats/Main.storyboard
@@ -1,24 +1,25 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zMi-AK-nI5">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zMi-AK-nI5">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application View Controller-->
         <scene sceneID="ED0-ZL-QUO">
             <objects>
                 <viewController id="zMi-AK-nI5" customClass="ApplicationViewController" customModule="H5S" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="IHV-Ly-B6w"/>
-                        <viewControllerLayoutGuide type="bottom" id="2yK-8v-zG8"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="cHC-Gy-e3t">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wBD-1X-3x9" userLabel="Top ContainerView">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" id="CQO-7W-ZMc"/>
                                 </constraints>
@@ -29,19 +30,14 @@
                                 </variation>
                             </containerView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wBD-1X-3x9" firstAttribute="height" secondItem="cHC-Gy-e3t" secondAttribute="height" id="AuT-N5-iX9"/>
                             <constraint firstItem="wBD-1X-3x9" firstAttribute="top" secondItem="cHC-Gy-e3t" secondAttribute="top" id="DBx-HT-PfQ"/>
-                            <constraint firstItem="wBD-1X-3x9" firstAttribute="leading" secondItem="cHC-Gy-e3t" secondAttribute="leading" id="U4b-Tp-MX0"/>
-                            <constraint firstAttribute="trailing" secondItem="wBD-1X-3x9" secondAttribute="trailing" id="ZBw-tM-pjG"/>
-                            <constraint firstItem="2yK-8v-zG8" firstAttribute="top" secondItem="wBD-1X-3x9" secondAttribute="bottom" id="wPL-cr-oMi"/>
+                            <constraint firstItem="wBD-1X-3x9" firstAttribute="leading" secondItem="nj7-0w-AAO" secondAttribute="leading" id="U4b-Tp-MX0"/>
+                            <constraint firstItem="nj7-0w-AAO" firstAttribute="trailing" secondItem="wBD-1X-3x9" secondAttribute="trailing" id="ZBw-tM-pjG"/>
+                            <constraint firstAttribute="bottom" secondItem="wBD-1X-3x9" secondAttribute="bottom" id="wPL-cr-oMi"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="AuT-N5-iX9"/>
-                            </mask>
-                        </variation>
+                        <viewLayoutGuide key="safeArea" id="nj7-0w-AAO"/>
                     </view>
                     <connections>
                         <outlet property="containerView" destination="wBD-1X-3x9" id="AHD-7N-dCK"/>
