--- a/Halo5Stats/SignIn.storyboard
+++ b/Halo5Stats/SignIn.storyboard
@@ -1,10 +1,14 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Iaz-hm-etg">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Iaz-hm-etg">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Launch View Controller-->
@@ -16,23 +20,23 @@
                         <viewControllerLayoutGuide type="bottom" id="F3W-TK-UXs"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="PNb-hO-Lgc">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xi1-1q-PUI">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <connections>
                                     <segue destination="XSJ-yM-Pjf" kind="embed" id="znk-Pt-9tv"/>
                                 </connections>
                             </containerView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q89-B5-c2u">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wRn-wQ-F1M" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VZ0-7z-5Fb">
-                                                <rect key="frame" x="150" y="464" width="300" height="30"/>
+                                                <rect key="frame" x="37.5" y="497.5" width="300" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="300" id="f0B-RT-u24"/>
                                                 </constraints>
@@ -40,50 +44,50 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qWX-Nv-xAy">
-                                                <rect key="frame" x="150" y="494" width="300" height="1"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <rect key="frame" x="37.5" y="527.5" width="300" height="1"/>
+                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="300" id="ZVi-bw-Lm9"/>
                                                     <constraint firstAttribute="height" constant="1" id="nUH-zx-kGa"/>
                                                 </constraints>
                                             </view>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Halo5StatsLogo" translatesAutoresizingMaskIntoConstraints="NO" id="vMK-oN-bVB">
-                                                <rect key="frame" x="225" y="167" width="150" height="267"/>
+                                                <rect key="frame" x="112.5" y="200.5" width="150" height="267"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="150" id="5eq-Dc-oVM"/>
                                                     <constraint firstAttribute="width" secondItem="vMK-oN-bVB" secondAttribute="height" multiplier="290:517" id="e2h-xm-woe"/>
                                                 </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cUO-F1-8dt" customClass="OutlineButton" customModule="H5S" customModuleProvider="target">
-                                                <rect key="frame" x="150" y="503" width="300" height="30"/>
+                                                <rect key="frame" x="37.5" y="536.5" width="300" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="300" id="ew6-x1-t6v"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWe-Up-mYB">
-                                                <rect key="frame" x="276" y="541" width="48" height="30"/>
+                                                <rect key="frame" x="163.5" y="574.5" width="48" height="30"/>
                                                 <state key="normal" title="Cancel"/>
                                                 <connections>
                                                     <action selector="cancelButtonTapped:" destination="Iaz-hm-etg" eventType="touchUpInside" id="9La-hg-CWI"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cm5-qK-LTn" customClass="LoadingIndicator" customModule="H5S" customModuleProvider="target">
-                                                <rect key="frame" x="275" y="478" width="50" height="50"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <rect key="frame" x="162.5" y="511.5" width="50" height="50"/>
+                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="aAO-lG-60P"/>
                                                     <constraint firstAttribute="width" constant="50" id="qWa-3x-1Se"/>
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Initializing app data..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bki-xP-KxZ">
-                                                <rect key="frame" x="219" y="442" width="162" height="21"/>
+                                                <rect key="frame" x="106.5" y="475.5" width="162" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="bWe-Up-mYB" firstAttribute="top" secondItem="cUO-F1-8dt" secondAttribute="bottom" constant="8" id="3Lh-XE-ZgH"/>
                                             <constraint firstItem="qWX-Nv-xAy" firstAttribute="centerX" secondItem="wRn-wQ-F1M" secondAttribute="centerX" id="7hK-Ve-sYG"/>
@@ -132,12 +136,12 @@
                                 </variation>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="xi1-1q-PUI" firstAttribute="top" secondItem="PNb-hO-Lgc" secondAttribute="top" id="649-9q-iXn"/>
                             <constraint firstItem="xi1-1q-PUI" firstAttribute="leading" secondItem="PNb-hO-Lgc" secondAttribute="leading" id="Dq0-TT-5iS"/>
                             <constraint firstItem="wRn-wQ-F1M" firstAttribute="width" secondItem="PNb-hO-Lgc" secondAttribute="width" id="F2z-f3-ucS"/>
-                            <constraint firstItem="F3W-TK-UXs" firstAttribute="top" secondItem="xi1-1q-PUI" secondAttribute="bottom" id="PRq-Gz-BMj"/>
+                            <constraint firstAttribute="bottom" secondItem="xi1-1q-PUI" secondAttribute="bottom" id="PRq-Gz-BMj"/>
                             <constraint firstItem="q89-B5-c2u" firstAttribute="top" secondItem="PNb-hO-Lgc" secondAttribute="top" id="Rbb-BD-rdW"/>
                             <constraint firstAttribute="trailing" secondItem="xi1-1q-PUI" secondAttribute="trailing" id="XRm-ud-nXT"/>
                             <constraint firstItem="q89-B5-c2u" firstAttribute="leading" secondItem="PNb-hO-Lgc" secondAttribute="leading" id="ZGM-O4-VRD"/>
@@ -178,9 +182,9 @@
                         <viewControllerLayoutGuide type="bottom" id="Egf-Fo-fZd"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="uMc-lA-p7t">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BVW-fI-9jU" userLabel="First Responder" sceneMemberID="firstResponder"/>
